--- a/Portfolio/more.css
+++ b/Portfolio/more.css
@@ -181,3 +181,54 @@
 /**  *****************SKILLS END*********************** **/
 
 /********************  Contact ******************/
+
+
+
+
+
+
+
+
+/********************  RESPONSIVE MOBILE ******************/
+
+@media screen and (max-width: 673px) {
+    .nav ul{
+    margin: 0px 5px;
+    }
+    .nav a{ padding: 5px; font-size: 14px;}
+
+
+    .main .heroP .cover .profile {
+        width: 80px;
+        height: 80px;
+        border-width: 5px;
+    }
+
+    .main .nav {
+        justify-content: center;
+    }
+ /*
+    .main .boxCont {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    }
+
+    .main .boxCont .box {
+        width: 100px;
+        height: 300px;
+    }
+     .text {
+    position: relative;
+    transform: translateY(-350%);
+    font-size: 12px;
+    }
+
+    .box .percent svg circle {
+    width:50px;
+    height:50px;
+        
+    }
+
+    */
+}
