--- a/Portfolio/more.css
+++ b/Portfolio/more.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Sansita+Swashed&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -80,6 +80,10 @@
     position: absolute;
     top: -35px;
     border: 10px ridge #66fcf1;
+
+}
+.main .heroP .cover h2 {
+    font-family: 'Sansita Swashed', cursive;
 }
 .main .heroP .cover p {
     transform: translateY(50px);
@@ -90,6 +94,7 @@
 
 
 /********************  SKILLS ******************/
+
 .main .boxCont {
     position: relative;
     height: 100vh;
@@ -107,8 +112,9 @@
 }
 .main .boxCont .box {
     position: relative;
-    width: 200px;
-    height: 400px;
+    display: flex;
+    width: 300px;
+    height: 300px;
     background: darkcyan;
     margin: auto;
     align-items: center;
@@ -123,6 +129,7 @@
     width: 150px;
     height: 150px;
     color: #c5c6c7;
+    justify-content: center;
     
 }
 .box .percent svg {
@@ -130,7 +137,7 @@
     width: 150px;
     height: 150px;
     left: 50%;
-    transform: translate(-33%, 50%);
+
     
 }
 .box .text {
@@ -177,6 +184,7 @@
     position: absolute;
     color:#c5c6c7;
     top: 5px;
+    font-family: 'Sansita Swashed', cursive;
 }
 /**  *****************SKILLS END*********************** **/
 
